--- a/airbyte-webapp/src/locales/zh.json
+++ b/airbyte-webapp/src/locales/zh.json
@@ -613,10 +613,10 @@
   "signup.pageTitle": "免费试用",
   "daspire": "Daspire",
   "auth.authSeparator": "或",
-  "signup.Title": "电商企业最佳\n数据管理工具",
+  "signup.Title": "电商企业最佳数据管理工具",
   "signup.List1": "14天免费试用",
   "signup.List2": "支持各大电商网站",
-  "signup.List6": "支持主流数据仓库、数据库\n&数据湖",
+  "signup.List6": "支持主流数据仓库、数据库&数据湖",
   "signup.List3": "加速电商企业的数据分析，让电商企业专注于其核心业务",
   "signup.List4": "安全且可扩展的系统",
   "signup.List5": "根据使用情况收费。没有数据同步？没有任何费用！",
@@ -645,15 +645,16 @@
   "signup.matchPassword": "密码不匹配，请重试。",
   "signup.confirmPassword.minLength": "密码必须至少为8个字符",
   "confirmPassword.empty.error": "确认密码是必填项",
-  "signup.haveAccount": "已有账户？",
+  "signup.haveAccount": "已有账号?",
   "signup.siginButton": "登录",
   "signup.companyName.placeholder": "输入您的公司名称",
   "signup.description": "提交此表格即表示您同意Daspire的{termLink}和{privacyLink}",
   "signup.terms": "服务条款",
   "signup.privacy": "隐私政策",
+  "signup.mobile.title": "开启您的{text}",
 
   "login.pageTitle": "登录",
-  "login.title": "登录您的账户",
+  "login.title": "登录您的账号",
   "login.button": "登录",
   "login.yourEmail": "邮箱",
   "login.yourPassword": "密码",
@@ -661,7 +662,7 @@
   "login.yourPassword.placeholder": "输入您的密码",
   "login.email.error": "请输入有效的邮箱",
   "login.signup": "注册",
-  "login.signupDescription": "还没有账号？点击{signupLink}这里",
+  "login.signupDescription": "还没有账号?",
   "sidebar.DaspireLogo": "Daspire",
   "sidebar.DaspireDashboard": "概览",
   "sidebar.DaspireSetting": "设置",
