--- a/docs/integrations/sources/s3.md
+++ b/docs/integrations/sources/s3.md
@@ -215,6 +215,7 @@ The Jsonl parser uses pyarrow hence,only the line-delimited JSON format is suppo
 
 | Version | Date       | Pull Request                                                                                                    | Subject                                                                                    |
 |:--------|:-----------|:----------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------|
+| 2.0.1   | 2023-03-06 | [23195](https://github.com/airbytehq/airbyte/pull/23195)                                                        | Fix datetime format string                                                                 |
 | 2.0.0   | 2023-03-14 | [23189](https://github.com/airbytehq/airbyte/pull/23189)                                                        | Infer schema based on one file instead of all the files                                    |
 | 1.0.2   | 2023-03-02 | [23669](https://github.com/airbytehq/airbyte/pull/23669)                                                        | Made `Advanced Reader Options` and `Advanced Options` truly `optional` for `CSV` format    |
 | 1.0.1   | 2023-02-27 | [23502](https://github.com/airbytehq/airbyte/pull/23502)                                                        | Fix error handling                                                                         |
