--- a/airbyte-webapp/src/locales/en.json
+++ b/airbyte-webapp/src/locales/en.json
@@ -493,9 +493,12 @@
   "usageTable.cell.limit": "When usage exceeds",
   "usageTable.cell.addBtn.text": "Add more",
   "usageTable.cell.removeBtn.text": "Remove",
+  "usageTable.cell.saveBtn.text": "Save",
   "syncTable.cell.status": "Sync status",
   "syncTable.cell.fail": "When sync fails",
   "syncTable.cell.success": "When sync succeeds",
+  "notification.status.enabled": "Enabled",
+  "notification.status.disabled": "Disabled",
   "settings.accountSetting.password": "Password",
   "payment.tabTitle": "Payment",
   "plan.type.heading": "Plan type",
@@ -785,5 +788,13 @@
   "tables.dangerZone": "Danger zone",
   "tables.allSources": "All Sources",
   "tables.allDestinations": "All Destinations",
-  "tables.overview": "Overview"
+  "tables.overview": "Overview",
+  "usage.notification.banner.usageText": "You have used {percentage}% of the total rows for this billing cycle.",
+  "ignore.notification.modal.heading": "Ignore notification?",
+  "ignore.notification.modal.bodyText": "Upgrade now to continue processing your data without interruption.",
+  "ignore.notification.modal.ignoreBtnText": "Ignore",
+  "ignore.notification.modal.upgradeBtnText": "Upgrade now",
+  "ignore.notification.modal.checkboxText": "Do not remind me again during this billing cycle",
+  "billing.warning.banner.text1": "You have reached your data processing limit for this billing cycle.",
+  "billing.warning.banner.text2": "Data streaming is paused until you upgrade, or when next billing cycle starts."
 }
