--- a/airbyte-webapp/src/locales/zh.json
+++ b/airbyte-webapp/src/locales/zh.json
@@ -495,7 +495,7 @@
   "usageTable.cell.limit": "当使用量超过",
   "usageTable.cell.addBtn.text": "添加更多",
   "usageTable.cell.removeBtn.text": "消除",
-  "usageTable.cell.saveBtn.text": "节省",
+  "usageTable.cell.saveBtn.text": "保存",
   "syncTable.cell.status": "同步状态",
   "syncTable.cell.fail": "同步失败时",
   "syncTable.cell.success": "同步成功时",
