--- a/docs/integrations/sources/s3.md
+++ b/docs/integrations/sources/s3.md
@@ -215,6 +215,7 @@ The Jsonl parser uses pyarrow hence,only the line-delimited JSON format is suppo
 
 | Version | Date       | Pull Request                                                                                                    | Subject                                                                                                              |
 |:--------|:-----------|:----------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------------------------------------------------------|
+| 2.0.4   | 2023-03-23 | [00000](https://github.com/airbytehq/airbyte/pull/00000)                                                        | Call `check` with a little block size to save time and memory.                                                       |
 | 2.0.3   | 2023-03-17 | [00000](https://github.com/airbytehq/airbyte/pull/00000)                                                        | Support legacy datetime format for the period of migration, fix time-zone conversion.                                |
 | 2.0.2   | 2023-03-16 | [24157](https://github.com/airbytehq/airbyte/pull/24157)                                                        | Return empty schema if `discover` finds no files; Do not infer extra data types when user defined schema is applied. |
 | 2.0.1   | 2023-03-06 | [23195](https://github.com/airbytehq/airbyte/pull/23195)                                                        | Fix datetime format string                                                                                           |
