CU-865c13jp9 - bug:Should be modified according to the prototype，Click the button to contact sales and jump to our email support@daspire.com

--- a/airbyte-webapp/src/locales/en.json
+++ b/airbyte-webapp/src/locales/en.json
@@ -528,9 +528,12 @@
   "feature.header.professional": "Professional",
   "feature.header.enterprise": "Enterprise",
   "feature.cell.pricing": "Pricing",
+  "feature.cell.professional.custom.pricing": "Custom pricing",
   "feature.cell.professional.message": "All you need to start streamline your data workflow.",
   "feature.cell.professional.perMonth": "mo",
-  "feature.cell.professional.btnText": "Select",
+  "feature.cell.professional.select.btn": "Select",
+  "feature.cell.professional.contact.sales.btn": "Contact Sales",
+  "feature.cell.professional.mailBody": "Contact Sales to get quotation for custom professional plan",
   "feature.cell.enterprise.customPrising": "Custom pricing",
   "feature.cell.enterprise.message": "Priority support, audit log, SLA, and so much more.",
   "feature.cell.enterprise.btnText": "Get a Quote",
