--- a/airbyte-webapp/src/locales/zh.json
+++ b/airbyte-webapp/src/locales/zh.json
@@ -528,9 +528,12 @@
   "feature.header.professional": "专业版",
   "feature.header.enterprise": "企业版",
   "feature.cell.pricing": "定价",
+  "feature.cell.professional.custom.pricing": "特别定价",
   "feature.cell.professional.message": "简化数据工作流程所需的一切。",
   "feature.cell.professional.perMonth": "每月",
-  "feature.cell.professional.btnText": "选择",
+  "feature.cell.professional.select.btn": "选择",
+  "feature.cell.professional.contact.sales.btn": "获取报价",
+  "feature.cell.professional.mailBody": "联系我们以获取专业版的特别定价",
   "feature.cell.enterprise.customPrising": "特别定价",
   "feature.cell.enterprise.message": "优先支持、日志审核、服务水平协议等等。",
   "feature.cell.enterprise.btnText": "获取报价",
