--- a/airbyte-webapp/src/locales/zh.json
+++ b/airbyte-webapp/src/locales/zh.json
@@ -777,6 +777,7 @@
   "verifyEmail.clickHereText": "Click here",
   "verifyEmail.info": "info@daspire.com",
   "verifyEmail.pageTitle": "Verify Email",
+  "resetPassword.pageTitle": "Reset Password",
   "resetPassword.forgot.title": "Forgot your password?",
   "resetPassword.forgot.explain": "Please enter the email address you used to register your Daspire account. ",
   "resetPassword.forgot.button": "Reset Password",
