--- a/airbyte-webapp/src/locales/en.json
+++ b/airbyte-webapp/src/locales/en.json
@@ -769,6 +769,6 @@
   "billing.warning.banner.text1": "You have reached your data processing limit for this billing cycle.",
   "billing.warning.banner.text2": "Data streaming is paused until you upgrade, or when next billing cycle starts.",
 
-  "sync.success.message": "数据接口：{connectionName}刚刚同步成功。",
-  "sync.fail.message": "数据接口：{connectionName}刚刚同步失败了。"
+  "sync.success.message": "Sync for connection {connectionName} was successful.",
+  "sync.fail.message": "Sync for connection {connectionName} failed."
 }
