add verify email zh translate

--- a/airbyte-webapp/src/locales/zh.json
+++ b/airbyte-webapp/src/locales/zh.json
@@ -767,30 +767,27 @@
   "ignore.notification.modal.checkboxText": "在此结算周期内不再提醒",
   "billing.warning.banner.text1": "您已达到此计费周期的数据处理限制。",
   "billing.warning.banner.text2": "数据同步直到您升级方案或下一个计费周期开始前已暂停。",
-
-  "verifyEmail.title": "Please Verify Your Email",
-  "verifyEmail.text1": "Thank you for signing up for Daspire. \nAn email with a verification link has been sent to the email you provided during the registration process. Please use the the link to verify your email, and access your account.",
-  "verifyEmail.text2": "Didn’t receive an email? {resentText} or check your spam folder. \nAlready verified? {clickHereText} to sign in to your account.",
-  "verifyEmail.text3": "Have questions? Email us: {infoText} ",
-  "verifyEmail.hasSent": "Email has been resent!",
-  "verifyEmail.resentText": "Click here to resend it",
-  "verifyEmail.clickHereText": "Click here",
+  "verifyEmail.title": "请验证您的邮箱",
+  "verifyEmail.text1": "感谢您注册Daspire。 \n我们已经向您在注册过程中提供的邮箱发送了一封验证邮件。请使用邮箱中的链接验证您的邮箱，以正常访问您的账号。",
+  "verifyEmail.text2": "没有收到邮件？{resentText}或检查您的垃圾邮件文件夹。 \n已经验证您的邮箱？{clickHereText}登录您的帐号。",
+  "verifyEmail.text3": "如果您有任何问题，可通过邮件与我们联系：{infoText} ",
+  "verifyEmail.hasSent": "邮件已重新发送！",
+  "verifyEmail.resentText": "点击这里重新发送邮件",
+  "verifyEmail.clickHereText": "点击这里",
   "verifyEmail.info": "info@daspire.com",
-  "verifyEmail.pageTitle": "Verify Email",
-  "resetPassword.pageTitle": "Reset Password",
-  "resetPassword.forgot.title": "Forgot your password?",
-  "resetPassword.forgot.explain": "Please enter the email address you used to register your Daspire account. ",
-  "resetPassword.forgot.button": "Reset Password",
-  "resetPassword.forgot.link": "Back to Sign In",
-  "resetPassword.check.title": "Check your email",
-  "resetPassword.check.explain": "An email containing the link to reset your password has been sent to the email below. ",
-  "resetPassword.check.button": "Return to Sign In",
-  "resetPassword.reset.title": "Reset your password",
-  "resetPassword.reset.button": "Reset Password",
-  "resetPassword.reset.form.password": "Password (8 characters or longer)",
-  "resetPassword.reset.form.password.error": "Password must be at least 8 characters.",
-  "resetPassword.reset.form.confirmPassword": "Confirm password",
-  "resetPassword.reset.form.confirmPassword.error": "Confirm password must be at least 8 characters.",
-  "sync.success.message": "Sync for connection Amazon {message} was successful.",
-  "sync.fail.message": "Sync for connection Amazon {message} failed."
+  "verifyEmail.pageTitle": "验证邮箱",
+  "resetPassword.pageTitle": "重置密码",
+  "resetPassword.forgot.title": "忘记密码？",
+  "resetPassword.forgot.explain": "请输入您用于注册Daspire账号的邮箱地址。 ",
+  "resetPassword.forgot.button": "重置密码",
+  "resetPassword.forgot.link": "返回登录",
+  "resetPassword.check.title": "查看您的邮箱",
+  "resetPassword.check.explain": "一封包含重置密码链接的邮件已发送至以下邮箱：",
+  "resetPassword.check.button": "返回登录",
+  "resetPassword.reset.title": "重置密码",
+  "resetPassword.reset.button": "重置密码",
+  "resetPassword.reset.form.password": "密码（8个字符及以上）",
+  "resetPassword.reset.form.password.error": "密码必须至少为8个字符。",
+  "resetPassword.reset.form.confirmPassword": "确认密码",
+  "resetPassword.reset.form.confirmPassword.error": "确认密码必须至少为8个字符。"
 }
